@startuml
hide circle
hide methods
hide stereotypes

' --- Geografi ---
package "Geografi" {
  entity kommune {
    +kommune_id
  }
  entity bydel {
    +bydel_id
  }
  entity gate {
    +gate_id
  }

  kommune ||--o{ bydel : "inneholder"
  kommune ||--o{ gate : "har"
  bydel ||--o{ bygning : "inneholder"
  bydel ||--o{ uteomraade : "inneholder"
}

' --- Eiendom og bygg ---
package "Eiendom og bygg" {
  entity matrikkelenhet {
    +enhet_id
  }
  entity bygning {
    +bygg_id
  }
  entity bygning_matrikkelenhet {
  }
  entity floy {
    +floy_id
  }
  entity etasje {
    +etasje_id
  }
  entity bruksenhet {
    +bruksenhet_id
  }
  entity rom {
    +rom_id
  }

  kommune ||--o{ matrikkelenhet : "har"
  matrikkelenhet ||--o{ bruksenhet : "inneholder"
  bygning ||--o{ floy : "har"
  bygning ||--o{ etasje : "har"
  bygning ||--o{ bruksenhet : "kan ha"
  etasje ||--o{ bruksenhet : "kan ha"
  bruksenhet ||--o{ rom : "inneholder"
  floy ||--o{ rom : "kan ha"
  bygning }o--o{ matrikkelenhet : "bygning_matrikkelenhet"
}

' --- Adresse ---
package "Adresse" {
  entity adresse {
    +adresse_id
  }

  gate ||--o{ adresse : "har"
  matrikkelenhet ||--o{ adresse : "kan ha"
  bygning ||--o{ adresse : "kan ha"
  bruksenhet ||--o{ adresse : "kan ha"
  uteomraade ||--o{ adresse : "kan ha"
}

' --- Uteområde ---
package "Uteområde" {
  entity uteomraade_type {
    +type_id
  }
  entity uteomraade {
    +uteomraade_id
  }
  entity adkomstpunkt {
    +adkomstpunkt_id
  }

  uteomraade_type ||--o{ uteomraade : "klassifiserer"
  uteomraade ||--o{ adkomstpunkt : "har"
}

' --- IFC / BIM ---
package "IFC / BIM" {
  entity ifc_type {
    +type_id
  }
  entity ifc_product {
    +product_id
  }
  entity ifc_product_location {
  }
  entity ifc_system {
    +system_id
  }
  entity ifc_product_system {
  }
  entity ifc_rel_aggregates {
  }
  entity classification {
    +class_id
  }
  entity product_classification {
  }
  entity ifc_property_set {
    +pset_id
  }
  entity ifc_property {
    +property_id
  }

  ifc_type ||--o{ ifc_product : "typer"
  ifc_product ||--o{ ifc_product_location : "lokalisert"
  bygning ||--o{ ifc_product_location : inneholder
  floy ||--o{ ifc_product_location : inneholder
  etasje ||--o{ ifc_product_location : inneholder
  rom ||--o{ ifc_product_location : inneholder
  uteomraade ||--o{ ifc_product_location : inneholder

  ifc_system ||--o{ ifc_product_system : "har"
  ifc_product ||--o{ ifc_product_system : "deltar i"
  ifc_product ||--o{ ifc_rel_aggregates : "parent/child"
  classification ||--o{ product_classification : "klassifiserer"
  ifc_product ||--o{ product_classification : "har"
  ifc_property_set ||--o{ ifc_property : "har"
  ifc_product ||--o{ ifc_property : "har"
}

' --- Integrasjon / Fagsystem ---
package "Integrasjon / Fagsystem" {
  entity fagsystem {
    +fagsystem_id
  }
  entity fagsystem_instans {
    +instans_id
  }
  entity ressurslenke {
    +ressurslenke_id
  }

  fagsystem ||--o{ fagsystem_instans : "per system"
  kommune ||--o{ fagsystem_instans : "har instanser"
  fagsystem_instans ||--o{ ressurslenke : "har lenker"

  ressurslenke }o--|| bygning : peker
  ressurslenke }o--|| bruksenhet : peker
  ressurslenke }o--|| rom : peker
  ressurslenke }o--|| uteomraade : peker
  ressurslenke }o--|| ifc_product : peker
}
@enduml
